--- a/assets/index.html
+++ b/assets/index.html
@@ -9,9 +9,7 @@
         content="ie=edge" />
   <title></title>
   <link rel="stylesheet"
-        href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
-        integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-        crossorigin="anonymous" />
+        href="https://cdn.materialdesignicons.com/4.5.95/css/materialdesignicons.min.css" />
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
           integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
           crossorigin="anonymous"></script>
