--- a/assets/index.html
+++ b/assets/index.html
@@ -14,6 +14,10 @@
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Asap|Asap+Condensed|Poppins&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://unpkg.com/magic-grid/dist/magic-grid.min.js"></script>
     <link rel="stylesheet" href="index.css" />
   </head>
