--- a/assets/index.html
+++ b/assets/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="p:domain_verify" content="888d983503e053f3db87d36354df7eef" />
     <title></title>
     <link
       rel="stylesheet"
