Change footer credit and fix some files

--- a/assets/index.html
+++ b/assets/index.html
@@ -44,8 +44,11 @@
         <div class="projects" id="forks_section"></div>
       </div>
       <div id="footer">
-        <a href="https://github.com/imfunniee" target="_blank">
-          made on earth by a human
+        <a
+          href="https://github.com/k4ustu3h/gitfolio#acknowledgments"
+          target="_blank"
+        >
+          made on earth by humans
         </a>
       </div>
     </div>
