Change font to Manrope

--- a/assets/index.html
+++ b/assets/index.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     ></script>
     <link
-      href="https://fonts.googleapis.com/css?family=Asap|Asap+Condensed|Poppins&display=swap"
+      href="https://fonts.googleapis.com/css?family=Asap|Asap+Condensed&display=swap"
       rel="stylesheet"
     />
     <script src="https://unpkg.com/magic-grid/dist/magic-grid.min.js"></script>
