Switch to Iconify and add XDA Developers

--- a/assets/index.html
+++ b/assets/index.html
@@ -6,10 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="p:domain_verify" content="888d983503e053f3db87d36354df7eef" />
     <title></title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.materialdesignicons.com/4.8.95/css/materialdesignicons.min.css"
-    />
+    <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
