Updates and Fixes
Updated
  - handlebars
  - snyk
Fixed
  - index.html
  - index.css
  - build.js
Removed
  - fs-extra

--- a/assets/index.html
+++ b/assets/index.html
@@ -6,24 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="p:domain_verify" content="888d983503e053f3db87d36354df7eef" />
     <title></title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Asap|Asap+Condensed&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://github.com/sharanda/manrope/raw/master/fonts/web/index.css"
+      rel="stylesheet"
+    />
+    <script src="https://unpkg.com/magic-grid/dist/magic-grid.min.js"></script>
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
-    <link
-      href="https://fonts.googleapis.com/css?family=Asap|Asap+Condensed&display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://unpkg.com/magic-grid/dist/magic-grid.min.js"></script>
     <link rel="stylesheet" href="index.css" />
   </head>
 
   <body>
-    <div id="profile">
-      <div id="profile_img">
-        <span id="status">K_</span>
+    <div class="profile">
+      <div class="profile_img">
+        <span>K_</span>
       </div>
       <div id="username">
         <div id="fullname"></div>
@@ -31,7 +35,7 @@
       <div id="userbio"></div>
       <div id="about"></div>
     </div>
-    <div id="display">
+    <div class="display">
       <div id="work">
         <h1>Work.</h1>
         <div class="projects" id="work_section"></div>
@@ -40,7 +44,7 @@
         <h1>Forks.</h1>
         <div class="projects" id="forks_section"></div>
       </div>
-      <div id="footer">
+      <div class="footer">
         <a
           href="https://github.com/k4ustu3h/gitfolio#acknowledgments"
           target="_blank"
