Updates and Fixes
Updated
  - acorn
  - got
  - jsdom
  - snyk
  - stylelint
Fixed
  - Moved script to populate.js so that username and bio variable can work.

--- a/assets/index.html
+++ b/assets/index.html
@@ -32,7 +32,6 @@
       <div id="username">
         <div id="fullname"></div>
       </div>
-      <div id="userbio"></div>
       <div id="about"></div>
     </div>
     <div class="display">
@@ -53,84 +52,6 @@
         </a>
       </div>
     </div>
-    <script>
-      const magicProjectsGrid = new MagicGrid({
-        container: "#work_section",
-        animate: false,
-        gutter: 30, // default gutter size
-        static: true,
-        useMin: false,
-        maxColumns: 2,
-        useTransform: true
-      });
-
-      const magicForksGrid = new MagicGrid({
-        container: "#forks_section",
-        animate: false,
-        gutter: 30, // default gutter size
-        static: true,
-        useMin: false,
-        maxColumns: 2,
-        useTransform: true
-      });
-
-      $("document").ready(() => {
-        magicProjectsGrid.listen();
-        magicForksGrid.listen();
-      });
-
-      // function([string1, string2],target id,[color1,color2])
-      consoleText(["K4USTU3H", "Just another code copy-paster."], "text", [
-        "white",
-        "white"
-      ]);
-
-      function consoleText(words, id, colors) {
-        if (colors === undefined) colors = ["#fff"];
-        var visible = true;
-        var con = document.getElementById("console");
-        var letterCount = 1;
-        var x = 1;
-        var waiting = false;
-        var target = document.getElementById(id);
-        target.setAttribute("style", "color:" + colors[0]);
-        window.setInterval(function() {
-          if (letterCount === 0 && waiting === false) {
-            waiting = true;
-            target.innerHTML = words[0].substring(0, letterCount);
-            window.setTimeout(function() {
-              var usedColor = colors.shift();
-              colors.push(usedColor);
-              var usedWord = words.shift();
-              words.push(usedWord);
-              x = 1;
-              target.setAttribute("style", "color:" + colors[0]);
-              letterCount += x;
-              waiting = false;
-            }, 1000);
-          } else if (letterCount === words[0].length + 1 && waiting === false) {
-            waiting = true;
-            window.setTimeout(function() {
-              x = -1;
-              letterCount += x;
-              waiting = false;
-            }, 1000);
-          } else if (waiting === false) {
-            target.innerHTML = words[0].substring(0, letterCount);
-            letterCount += x;
-          }
-        }, 120);
-        window.setInterval(function() {
-          if (visible === true) {
-            con.className = "console-underscore hidden";
-            visible = false;
-          } else {
-            con.className = "console-underscore";
-
-            visible = true;
-          }
-        }, 400);
-      }
-    </script>
+    <div id="script"></div>
   </body>
 </html>
