--- a/assets/index.html
+++ b/assets/index.html
@@ -6,15 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="p:domain_verify" content="888d983503e053f3db87d36354df7eef" />
     <title></title>
+    <!-- Web Fonts -->
     <link
-      href="https://fonts.googleapis.com/css?family=Asap|Asap+Condensed&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Asap&family=Asap+Condensed&family=Manrope:wght@700&display=swap"
       rel="stylesheet"
     />
     <script src="https://unpkg.com/magic-grid/dist/magic-grid.min.js"></script>
     <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
     <script
-      src="https://code.jquery.com/jquery-3.5.0.min.js"
-      integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="index.css" />
