--- a/assets/index.html
+++ b/assets/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="p:domain_verify" content="888d983503e053f3db87d36354df7eef" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
     <!-- Web Fonts -->
     <link
@@ -12,20 +12,19 @@
       rel="stylesheet"
     />
     <script src="https://unpkg.com/magic-grid/dist/magic-grid.min.js"></script>
-    <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
     <script
-      src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      rel="preconnect"
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
     ></script>
     <link rel="stylesheet" href="index.css" />
   </head>
 
   <body>
-    <div class="profile">
-      <div class="profile_img">
-        <span>K_</span>
-      </div>
+    <div id="profile">
+      <div id="initials"></div>
       <div id="username">
         <div id="fullname"></div>
       </div>
@@ -43,6 +42,7 @@
       <div class="footer">
         <a
           href="https://github.com/k4ustu3h/gitfolio#acknowledgments"
+          rel="noopener"
           target="_blank"
         >
           made on earth by humans
