Added support fot Gravatar and YouTube
Updated
  - bluebird
  - express
  - got
  - jsdom
  - snyk
  - eslint
Fixed
  - User Bio not apperaing when there's an emoji in it
Removed
  - User Bio typewriter animation

--- a/assets/index.html
+++ b/assets/index.html
@@ -25,9 +25,8 @@
   <body>
     <div id="profile">
       <div id="initials"></div>
-      <div id="username">
-        <div id="fullname"></div>
-      </div>
+      <div id="username"></div>
+      <div id="userbio"></div>
       <div id="about"></div>
     </div>
     <div class="display">
